[project]
name = "ecoclim_tools"
version = "0.1.0"
description = "Lightweight utilities and plotting for eco-climate data."
authors = [{name = "Chenwei Xiao", email = "chenwei.xiao.13@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}  # Points to the file you just created
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
# ...
dependencies = [
  "numpy",
  "pandas",
  "dask",
  "xarray",
  "netcdf4",
  "matplotlib",
  "cartopy",
  "seaborn",
  "mplotutils @ git+https://github.com/mpytools/mplotutils.git", 
]