[project]
name = "ecoclim_tools"
version = "0.1.0"
description = "Lightweight utilities and plotting for eco-climate data."
authors = [{name = "Chenwei Xiao", email = "chenwei.xiao.13@gmail.com"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
# ...
dependencies = [
  "numpy",
  "pandas",
  "dask",
  "xarray",
  "netcdf4",
  "matplotlib",
  "cartopy",
  "seaborn",
  "mplotutils @ git+https://github.com/mpytools/mplotutils.git", 
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ecoclim_tools"]  # <-- Be explicit! Only include your package name
exclude = ["scratch*", "tests*", "data*", "img*"] # <-- Explicitly ignore these folders
